# justjs

./: CLAUDE.md  package.json  tsconfig.base.json
.changeset/: config.json
.github/workflows/: ci.yml
ai-assist/scm/main/: package.json
application/scm/main/: package.json  tsconfig.json
cloud-connect/scm/main/: package.json
comms-connect/scm/main/: package.json
component-view/scm/main/: package.json  tsconfig.json
data/scm/main/: package.json  tsconfig.json
docs/: POC-CONTRACT-SPEC.md  external-consumption.md
docs/3-design/: architecture.md
docs/6-deployment/: playbook.md  release-signing.md
docs/7-operations/: playbook.md  runbook.md
docs/adr/: ADR-0001-ui-domain-layer.md  ADR-0002-boot-wiring.md  ADR-0003-data-layer-wiring.md  ADR-0004-reactive-rerender.md  ADR-0005-ssr-reconciliation.md  ADR-0006-component-view-package.md  ADR-0006-connect-kit-view.md  ADR-0006-connect-kit.md  ADR-0007-connect-kit-control.md  ADR-0007-connect-kit-provider-connector.md  ADR-0007-connect-kit-provider-flow.md  ADR-0007-provider-connect-package.md  ADR-0008-connect-kit-nav-header.md  ADR-0009-connect-kit-status-line.md  ADR-0010-connect-kit-image-attach.md  ADR-0011-connect-kit-prompt-field.md  ADR-0012-connect-kit-tab-toggle.md  ADR-0012-connect-kit-toggle.md  ADR-0013-connect-kit-no-grid-component.md  ADR-0014-connect-kit-tile-grid.md  ADR-0015-connect-kit-form.md  ADR-0016-connect-kit-list.md
e2e-demo/: justjs.config.toml  output.html  routes.gen.json
image-connect/scm/main/: package.json  tsconfig.json
justscript/docs/3-design/: ADR-0001-justscript.md  architecture.md  comparison.md  patterns.md
justscript/docs/4-development/: developer_guide.md
justscript/docs/6-deployment/: PLAYBOOK.md
justscript/docs/7-operations/: runbook.md
justscript/scm/main/: README.md  package.json  tsconfig.json
measurement/scm/main/: package.json  tsconfig.json
memory/scm/main/: package.json  tsconfig.json
network/scm/main/: README.md  package.json
osi-layers-integration/: package.json  tsconfig.json
osi-layers-integration/src/tests/: osi_layers_int_test.ts
scm/: vendor-external.sh
scm/bo/main/: Cargo.toml  README.md
scm/bo/main/src/: main.rs
scm/bo/main/src/api/: mod.rs  relay_target.rs
scm/bo/main/src/core/: json_relay_handler.rs  mod.rs
scm/bo/main/src/saf/: mod.rs
scm/bo/main/src/spi/: mod.rs
scm/bo/main/src/spi/git/: mod.rs
scm/tests/: vendor_external_int_test.ts
(+602 files in other folders)
